fix scrollbar

--- a/src/bp/admin/ui/src/app/style.scss
+++ b/src/bp/admin/ui/src/app/style.scss
@@ -1,6 +1,6 @@
 .mainLayout {
   align-items: flex-start;
-  height: calc(100vh - 28px);
+  height: calc(100vh - var(--statusbar-height) - 1px);
   display: flex;
   flex-wrap: wrap;
 }
